tests/bad_lvalue.output
CE
STDOUT [0B]:

STDERR [385B]:
Error: left operand of assignment must be lvalue
   ╭─[ tests/bad_lvalue.b:3:8 ]
   │
 3 │     10 =+ 10;
   │     ─┬ ──  
   │      ╰───── found rvalue
───╯
Error: '&' expects lvalue as operand
   ╭─[ tests/bad_lvalue.b:4:11 ]
   │
 4 │     b = ++&a--;
   │             │   
   │             ╰─── found rvalue
───╯

