tests/bad_lvalue.b
main() {
	auto a, b;
	10 =+ 10;
	b = ++&a--;
	*b[10] =& &a;
}
